--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
